--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -63,14 +63,14 @@
         <div class="btn-order"><a href="#">Записаться</a></div>
       </div>
       <div class="social-network">
-        <a href="#"><img src="{% static 'img/icon/instagram.svg' %}" alt="Нельзяграм"></a>
-        <a href="#"><img src="{% static 'img/icon/telegram.svg' %}" alt="Телеграм"></a>
-        <a href="#"><img src="{% static 'img/icon/whatsapp.svg' %}" alt="Whatsapp"></a>
-        <a href="#"><img src="{% static 'img/icon/linkedin.svg' %}" alt="linkedin"></a>
-        <a href="#"><img src="{% static 'img/icon/vk.svg' %}" alt="ВК"></a>
-        <a href="#"><img src="{% static 'img/icon/pinterest.svg' %}" alt="pinterest"></a>
-        <a href="#"><img src="{% static 'img/icon/tik-tok.svg' %}" alt="Тик Ток"></a>
-        <a href="#"><img src="{% static 'img/icon/facebook-messenger.svg' %}" alt="Facebook"></a>
+        <a href="#"><img src="{% static 'img/icon/instagram.svg' %}" alt="Нельзяграм" loading="lazy"></a>
+        <a href="#"><img src="{% static 'img/icon/telegram.svg' %}" alt="Телеграм" loading="lazy"></a>
+        <a href="#"><img src="{% static 'img/icon/whatsapp.svg' %}" alt="Whatsapp" loading="lazy"></a>
+        <a href="#"><img src="{% static 'img/icon/linkedin.svg' %}" alt="linkedin" loading="lazy"></a>
+        <a href="#"><img src="{% static 'img/icon/vk.svg' %}" alt="ВК" loading="lazy"></a>
+        <a href="#"><img src="{% static 'img/icon/pinterest.svg' %}" alt="pinterest" loading="lazy"></a>
+        <a href="#"><img src="{% static 'img/icon/tik-tok.svg' %}" alt="Тик Ток" loading="lazy"></a>
+        <a href="#"><img src="{% static 'img/icon/facebook-messenger.svg' %}" alt="Facebook" loading="lazy"></a>
       </div>
     </div>
     <div class="header">
