--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -401,7 +401,7 @@
   </section>
   <section class="question">
     <div class="question-title">
-      <h3><span class="blue">Ответы</span> на твои вопросы</h3>
+      <h3>FAQ</h3>
     </div>
     <div class="question-container">
       <div class="container">
