--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -17,6 +17,8 @@
   <meta property="og:url" content="https://dev-kazuschik.ru">
   <meta property="og:image" content="">
 
+    <meta name="yandex-verification" content="2ad9b6e4249b0baf" />
+
   <link rel="icon" href="{% static 'favicon.ico' %}" sizes="any">
   <link rel="icon" href="{% static 'icon.svg' %}" type="image/svg+xml">
   <link rel="apple-touch-icon" href="{% static 'icon.png' %}">
