--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -18,6 +18,7 @@
   <meta property="og:image" content="">
 
     <meta name="yandex-verification" content="2ad9b6e4249b0baf" />
+    <meta name="msvalidate.01" content="C1394A610EC900F684CD037E3AF4B03C" />
 
   <link rel="icon" href="{% static 'favicon.ico' %}" sizes="any">
   <link rel="icon" href="{% static 'icon.svg' %}" type="image/svg+xml">
