--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -26,6 +26,7 @@
 
   <link rel="manifest" href="{% static 'site.webmanifest' %}">
   <meta name="theme-color" content="#fafafa">
+    {% include "google_metrics.html" %}
 </head>
 
 <body>
