add yandex metrica

--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -27,6 +27,7 @@
   <link rel="manifest" href="{% static 'site.webmanifest' %}">
   <meta name="theme-color" content="#fafafa">
     {% include "google_metrics.html" %}
+    {% include "yandex_metrics.html" %}
 </head>
 
 <body>
