--- a/mainpage/templates/google_metrics.html
+++ b/mainpage/templates/google_metrics.html
@@ -1,5 +1,5 @@
 <!-- Google Analytics -->
-<script async>
+<script defer>
     document.addEventListener("DOMContentLoaded", function(){
     let gtagScript = document.createElement('script');
     gtagScript.async = true;
