django robots, sitemap

--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load render_bundle from webpack_loader %}
 <!doctype html>
 <html class="main" lang="ru">
 
@@ -514,7 +513,7 @@
       <p>Все права защищены</p>
     </div>
   </footer>
-  {% render_bundle 'jquery' 'js'%}
-  {% render_bundle 'main' 'js' %}
+  <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+  <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
