--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -22,6 +22,7 @@
 
   <link rel="icon" href="{% static 'favicon.ico' %}" sizes="any">
   <link rel="icon" href="{% static 'icon.svg' %}" type="image/svg+xml">
+    <link rel="icon" href="{% static 'icon.png' %}" type="image/x-icon">
   <link rel="apple-touch-icon" href="{% static 'icon.png' %}">
 
   <link rel="manifest" href="{% static 'site.webmanifest' %}">
